feat: add swagger annotation and archive post route
